# Quant

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
config/: base.yaml  universe.yaml
data/metadata/: data_dictionary.md
data/raw/: events.sample.csv  fundamentals.sample.csv  market.sample.csv  positions.sample.csv  rdagent_signals.sample.csv  trades.sample.csv
docs/: USER_GUIDE_ZH.md
scripts/: approve_orders.py  backtest.py  demo_a_share_smoke.py  run_pipeline.py  send_signal.py
scripts/rdagent/: README.md  import_signals.py
src/quant/: __init__.py  cli.py  config.py
src/quant/data/: calendar.py  cleaning.py  corporate_actions.py  symbols.py  universe.py
src/quant/data/ingestion/: __init__.py  akshare_adapter.py  baostock_adapter.py  broker_csv.py  hkex_adapter.py  tushare_adapter.py
src/quant/execution/: __init__.py  approval.py  message_builder.py  messenger.py  openclaw.py  order_builder.py
src/quant/features/: cross_market.py  events.py  fundamentals.py  price_volume.py  rdagent.py
src/quant/labels/: future_return.py
src/quant/models/: baseline_gbdt.py  train.py
src/quant/monitoring/: __init__.py  diagnostics.py  report.py
src/quant/portfolio/: backtest.py  constraints.py  optimizer.py
src/quant/research/: __init__.py
src/quant/signals/: signal_engine.py
src/quant/utils/: dates.py  io.py  logging.py
